pyquest/tests/parsing/valid/test006.ql
// Form with question of type string
form label {
  "Question?"
    var: string
}