pyquest/tests/parsing/invalid/test006.ql
// Question with invalid type
form label {
    "Question?"
    var : cows
}